--- a/public/css/styleCarddashBoard.css
+++ b/public/css/styleCarddashBoard.css
@@ -1,30 +1,51 @@
-.container {
-    display: flex; /* Menggunakan flexbox untuk menyusun secara horizontal */
-    justify-content: space-between; /* Menyusun item dengan jarak yang sama di antara mereka */
-    width: 100%;
-    max-width: 800px; /* Mengatur lebar maksimal container */
-    margin: 20px auto; /* Memberi margin atas dan bawah, serta mengatur otomatis pada sisi kiri dan kanan */
-  }
+h4{
+  margin-top: 10px;
+  margin-left: 250px;
+}
+.container-wrapper {
+  display: flex;
+  margin-top: 30px;
+  margin-left: 350px;
+}
 
-  /* Styling untuk setiap card */
-  .card {
-    flex: 0 0 30%; /* Membuat card fleksibel, tetap dengan lebar 30% dari container */
-    background-color: rgb(70, 160, 244);
-    border: 5px solid  rgb(0, 127, 246);
-    padding: 20px;
-    box-sizing: border-box; /* Menghitung padding dan border dalam total lebar/tinggi elemen */
-    text-align: center;
-  }
-  /* Styling untuk judul card */
-.card h2 {
-    font-size: 1.5em; /* Ukuran font untuk judul card */
-    color: #333; /* Warna teks untuk judul card */
-    margin-bottom: 20px; /* Margin bawah untuk memberikan ruang di antara judul dan paragraf */
-  }
-  
-  /* Styling untuk isi card */
-  .card p {
-    font-size: 1em; /* Ukuran font untuk isi card */
-    color: #666; /* Warna teks untuk isi card */
-    line-height: 1.4; /* Ketinggian baris untuk memastikan keterbacaan yang baik */
-  }
+/* Style untuk setiap kontainer */
+.container {
+  width: 190px;
+  height: 120px;
+  border: 4px solid rgb(172, 172, 172);
+  background-color: rgb(255, 255, 255);
+  box-sizing: border-box;
+  margin-inline:60px ;
+  border-radius: 10px;
+  padding-top: 15px;
+  text-align: center;
+}
+.container2{
+  position: relative; 
+  width: 900px;
+  height: 170px;
+  margin-left: 350px;
+  margin-top: 100px;
+  border: 4px solid rgb(172, 172, 172);
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  text-align: center;
+  padding-top: 10px;
+}
+.book-container{
+  position: absolute;
+  bottom: 0; 
+  width: 160px;
+  height: 200px;
+  border: 4px solid rgb(172, 172, 172);
+  border-radius: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+.book-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover1; 
+  border-radius: 10px; 
+}
