--- a/public/css/styleNavPartials.css
+++ b/public/css/styleNavPartials.css
@@ -1,30 +1,103 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
-}
-
-#wrapper {
+    font-family: Arial, sans-serif;
     display: flex;
 }
 
-#sidebar {
-    width: 250px;
-    background-color: #f8f9fa;
-    height: 100vh;
+.sidebar {
     position: fixed;
+    left: 0;
+    top: 0;
+    width: 200px;
+    height: 100%;
+    background-color: rgb(218, 218, 218);
+    color: rgb(66, 65, 65);
+    padding: 20px;
+    box-sizing: border-box;
+    z-index: 100;
 }
 
-#content {
+.logo-img {
+    width: 100%;
+    max-width: 150px;
+    height: auto;
+    margin-bottom: 20px;
+    top: 0;
+}
+
+.menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu a {
+    text-decoration: none;
+    color:rgb(66, 65, 65);
+    display:block;
+    padding: 10px 0;
+    border-bottom: 2px solid #3e3e3e;
+}
+
+.menu a:hover {
+    background-color: #cacaca;
+}
+
+.content {
     flex: 1;
     padding: 20px;
+    margin-top: 4%;
 }
 
-#footer {
-    text-align: center;
-    padding: 10px;
-    background-color: #f8f9fa;
+.navView {
+
+    display: flex;
     position: fixed;
-    bottom: 0;
+    top: 0;
+    align-items: center;
+    height: 60px;
+    width: 100%; 
+    padding: 10px;
+    background-color: rgb(218, 218, 218);
+    color: rgb(66, 65, 65);
+    z-index: 99;
+}
+
+.cart-logo{
+    width: 30px;
+    height: auto;
+    margin-right: 10px;
+    margin-left: 1075px;
+    display: flex;
+    border-radius: 40%; 
+}
+.user-avatar {
+    width: 30px;
+    height: auto;
+    display: flex;
+    margin-left: 10px;
+    border-radius: 40%; 
+}
+
+.user-name {
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.menu a,
+.nav-link {
+    text-decoration: none;
+    color:rgb(66, 65, 65);;
+    margin: 0 10px;
+}
+
+footer {
+    margin-top: 70px;
+    margin-bottom: 0;
     width: 100%;
+    background-color: rgb(218, 218, 218); 
+    color: #000000; 
+    padding: 10px; 
+    text-align: center; 
 }
